# NDM

./: .gitignore  Cargo.toml
.github/: CODEOWNERS
schemas/: image-gen.json
src/: command_framework.rs  main.rs  safe.rs  scheduler.rs
src/command_framework/: command.rs  command_args.rs  command_handler.rs  error.rs  mod.rs  prelude.rs
src/commands/: about.rs  category.rs  chuck.rs  help.rs  make.rs  meme.rs  mod.rs  urban.rs  urbanmug.rs  util.rs
src/commands/animal/: aww.rs  birb.rs  cat.rs  dog.rs  dog_cat_war.rs  fox.rs  mod.rs  rabbit.rs
src/schedules/: aww.rs  birb.rs  dog.rs  event_waiter_cleaner.rs  meme.rs  mod.rs  rabbit.rs  statistics.rs  topgg_update.rs
src/util/: eventwaiter.rs  mod.rs  reddit.rs  safe.rs
templates/: _template.toml  disaster.toml  floor.toml  pills.toml  slap.toml  surprised.toml  template.tmptoml  test.toml  warn.toml
templates/abandon/: abandon.toml
templates/armor/: armor.toml
templates/balloon/: balloon.toml
templates/ban/: ban.toml
templates/bed/: bed.toml
templates/boo/: boo.toml
templates/brain/: brain.toml
templates/brazzers/: brazzers.toml  brazzers.yml
templates/cancer/: cancer.toml
templates/cry/: cry.toml
templates/dab/: dab.toml
templates/delete/: delete.toml
templates/disability/: disability.toml
templates/door/: door.toml
templates/egg/: egg.toml
templates/failure/: failure.toml
templates/fakenews/: fakenews.toml
templates/floor/: floor.toml
templates/pills/: pills.toml
templates/slap/: slap.toml
templates/spongebob/: spongebob.toml
templates/warn/: warn.toml
(+21 files in other folders)
