[package]
name = "not_dank_memer"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Conner <zargor3@gmail.com>", "Turulix <tigga01@online.de>"]
edition = "2018"


[dependencies]
log = "^0.4"
simplelog = "^0.7.3"
reqwest = "0.9.21"
tempfile = "3.1.0"
serde = "1.0.97"
serde_json = "1.0"
time = "0.1"
chrono = "0.4.9"
log-panics = "2.0.0"
rand = "0.7"
base64 = "0.10.1"
image = "0.22"
imageproc = "0.19"
rusttype = "0.8"
toml = "0.5"
regex = "1"
lazy_static = "1.4.0"

[dependencies.serenity]
version = "0.7"
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "default_native_tls"]
default-features = false
